--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,17 @@
     "development": {
       "plugins": ["transform-react-jsx-source"]
     }
-  }
+  },
+  "plugins": [
+    ["module-resolver", {
+      "root": ["./src"],
+      "alias": {
+        "reducers": "./src/redux-flow/reducers",
+        "layout": "./src/layout",
+        "style": "./src/style",
+        "screens": "./src/screens",
+        "components": "./src/components"
+      }
+    }]
+  ]
 }
