--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "babel-plugin-module-resolver": "^3.0.0",
-    "jest-expo": "23.0.0",
-    "react-native-scripts": "1.8.1",
-    "react-test-renderer": "16.0.0",
-    "@storybook/react-native": "^3.2.17",
     "@storybook/addon-actions": "^3.2.17",
     "@storybook/addon-links": "^3.2.17",
+    "@storybook/react-native": "^3.2.17",
+    "babel-plugin-module-resolver": "^3.0.0",
+    "jest-expo": "23.0.0",
+    "prop-types": "^15.6.0",
     "react-dom": "16.0.0",
-    "prop-types": "^15.6.0"
+    "react-native-scripts": "1.8.1",
+    "react-test-renderer": "16.0.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -35,6 +35,7 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "styled-components": "^2.2.4"
+    "styled-components": "^2.2.4",
+    "uuid": "^3.1.0"
   }
 }
